     documentation (spaze)
  -  Applied fix for bug 1688864 (bad regexes) (Tim Starling)
  -  Fixed comment CSS rule in visualfoxpro
  -  ThinBASIC language update (Eros Olmi)
  -  Fixed outdated documentation URL of Perl language file (RuralMoon by BenBE)
  -  Fixed tab replacement code not generating the correct number of spaces in
     some cases (Guillermo Calvo)
Version 1.0.7.19
  -  Added language files
     * X++ (Simon Butcher)
     * Rails (Moises Deniz)
  -  Fixed invalid HTML being generated and doctypes not being highlighted over
     multiple lines properly when line numbers are on (Validome)
  -  Improved the ruby syntax highlighting by basing it off the Rails file
  -  Changed some regular expressions to possibly help with badly performing
     regex support in PHP (Tim Starling)
  -  Allow {TIME}, {LANGUAGE} and {VERSION} to be used in the header as well as
     the normal <TIME>/<LANGUAGE>/<VERSION> (AthanD)
  -  Changed comment regex in bash to prevent malformed XHTML (rv1971)
Version 1.0.7.18
  -  Added language files
     * ZiLOG Z80 Assembly (BenBE)
  -  Fixed incorrect highlighting when the starter of a multiline comment is
     longer than the ender (Robert Anthony).
  -  Fixed "</span" generated if a multiline comment is the last thing in the
     source (related to the above).
  -  Added #cs => #ce comment markers to AutoIT (Robert Anthony)
  -  Fixed spelling mistake for keyword in Python (wd3)
  -  Added a method to enable/disable keyword linking (Ian McKellar)
  -  Improved empty line detection for HTML output (BenBE)
  -  Changed code style of geshi.php, and removed tabs
Version 1.0.7.17
  -  Fixed up ends of files having too many newlines (binarygroop)
  -  Removed background colour on keyword group in eiffel (Julian Tschannen)
  -  Removed GESHI_DIR_SEPARATOR constant usage, it's unnecessary (Aleksey Zapparov)
  -  Added /* ... */ comments to coldfusion (Jeff Howden)
Version 1.0.7.16
  -  Added language files
     * C++/QT (Iulian M)